Notes: -ajout de l'âge dans le formulaire(fonctionne,juste revoir le code de verif serveur) -ajout du bouton adminsitration dans la barre de menu dans membre.php: il n'apparait que si la personne est administrateur: /!\ le CSS ne fonctionne pas dessus.

--- a/CSS/default.css
+++ b/CSS/default.css
@@ -73,6 +73,11 @@ body {
 	transition: background .5s;
 }
 
+#menu_administration:hover{
+	background: #3366CC;
+	transition: background .5s;
+}
+
 
 #contenu{
 	text-align:justify;
