--- a/CSS/default.css
+++ b/CSS/default.css
@@ -57,7 +57,10 @@ body {
 	background:#333;
 	text-align:center;
 	color:#FFF;
-	padding:10px;
+	padding:20px;
+    bottom: 0px;
+    width:100%;
+
 }
 
 #logo_partenaire{
