--- a/CSS/default.css
+++ b/CSS/default.css
@@ -5,7 +5,8 @@ body {
 #ban_img {
 	width:100%;
 	height:200px;
-	background-image:url(../Pictures/ban.jpg);
+	background-image:url(../Pictures/ban2.png);
+    background-position: center;
 	background-size: 100%;
 }
 
